--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Anubhab Guha</title>
+    <style>
+      #favicon {
+        border-radius: 20rem;
+        width: 32px;
+        height: 32px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
